[package]
name = "databend-loki-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
clap = { version = "4.5.21", features = ["derive", "env"] }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
databend-driver = "0.32.0"
nom = "8.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "1.0.68"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
