[package]
name = "databend-loki-adapter"
version = "0.2.0"
edition = "2024"
description = "Loki-compatible HTTP adapter that runs LogQL queries against Databend"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/databendlabs/databend-loki-adapter"
homepage = "https://www.databend.com"
documentation = "https://github.com/databendlabs/databend-loki-adapter"
authors = ["Databend Authors <opensource@databend.com>"]
keywords = ["databend", "loki", "grafana", "logs", "database"]
categories = ["database", "command-line-utilities", "visualization"]

[dependencies]
axum = "0.8.7"
clap = { version = "4.5.21", features = ["derive", "env"] }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
databend-driver = "0.33.0"
env_logger = "0.11.5"
nom = "8.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "1.0.68"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
log = "0.4.22"
